# wolfia-interview

./: .gitignore  README.md  docker-compose.yml  local.env
api/: generate_spec_and_models.py  openapi.json  pyproject.toml
backend/: Dockerfile  Dockerfile.postgres  init-db.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2944f18c79b3_add_user_sessions_internal_user_id_to_.py  3216d8119800_add_user_user_session_and_organization_.py  a9128f06669e_make_user_sessions_user_id_on_delete_.py  d9e64ba2c8ef_add_access_log_table_to_log_when_users_.py
backend/auth/: jwt_manager.py  login.py  models.py  user.py
backend/data/: database.py  tables.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/api/: Auth.ts  HealthCheck.ts  data-contracts.ts  http-client.ts  index.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/impersonate/: page.tsx
frontend/app/login/: page.tsx
frontend/openapi/: api.ejs  data-contract-jsdoc.ejs  data-contracts.ejs  http-client.ejs  procedure-call.ejs  route-docs.ejs
frontend/utils/auth/: index.ts
frontend/utils/url/: index.ts
